--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -74,6 +74,9 @@
 .w-80 {
     width: 80% !important;
 }
+.w-70 {
+    width: 70% !important;
+}
 
 .video-p-button {
     transition: .3s;
@@ -84,4 +87,8 @@
 
 .font-anybody{
     font-family: 'Anybody';
+}
+
+.text-low {
+    color: #b8b8b8;
 }
