--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 .bg-primaryy {
     background-color: #1E1E1E !important;
 }
@@ -105,4 +109,8 @@
 .section-class {
     position: sticky;
   top: 10%;
+}
+
+.font-anybody {
+
 }
